# manage-tech-secrets

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: django.yml
apps/common/models/: __init__.py  abstracts.py
apps/users/: forms.py
apps/users/admin/: __init__.py  tech_secret.py  user.py
apps/users/migrations/: 0001_initial.py
apps/users/models/: __init__.py  tech_secret.py  user.py
apps/users/services/: secret.py
conf/: asgi.py  settings.py  wsgi.py
templates/admin/tech_secret/: change_form.html
