[tool.poetry]
name = "manage-tech-secrets"
version = "0.1.0"
description = ""
package-mode = false
authors = ["aaaaaaaalesha"]
license = "LICENSE"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
django-environ = "^0.11.2"
typing-extensions = "^4.12.2"
django-extensions = "^3.2.3"


[tool.poetry.group.dev.dependencies]
pygraphviz = "^1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
